--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -2,6 +2,7 @@
   * [Users Working with redtamarin]
     * [GettingStarted Getting Started]
       * [GettingStartedInShinyColor More Details, Shiny Color and Screenshots]
+      * [GettingStartedAvmglue use avmglue]
     * old stuff
       * [GettingStarted_0_2_5 Getting Started 0.2.5]
       * [IDE HOWTO Setup your IDE]
