--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -3,6 +3,7 @@
     * [GettingStarted Getting Started]
       * [GettingStartedInShinyColor More Details, Shiny Color and Screenshots]
       * [GettingStartedAvmglue use avmglue]
+      * [GettingStartedProject a project based on redtamarin]
     * old stuff
       * [GettingStarted_0_2_5 Getting Started 0.2.5]
       * [IDE HOWTO Setup your IDE]
