--- a/wiki/RunningShellScripts.wiki
+++ b/wiki/RunningShellScripts.wiki
@@ -57,8 +57,7 @@ when "hello" run, the shell will replace `$@` with any arguments you provided.
 == Registering an extension as non-native binaries (Linux only) ==
 
 Because this is a Linux-specific feature, we do not recommend that developers deploy this solution,<br>
-as it would limit the portability of their scripts.<br>
-(but yeah under a Linux distro this is so f*cking cool)
+as it would limit the portability of their scripts. (but yeah under a Linux distro this is so f*cking cool ;) )
 
 In short, this make use of *binfmt_misc*, here the introduction from [http://www.kernel.org/doc/Documentation/binfmt_misc.txt the documentation]
 <pre>
@@ -72,3 +71,55 @@ at the beginning of the file with a magic byte sequence (masking out specified
 bits) you have supplied. Binfmt_misc can also recognise a filename extension
 aka '.com' or '.exe'.
 </pre>
+
+
+Let's do that all on the command line<br>
+(in case of you have only SSH access to your server)
+
+download the file
+{{{
+$ sudo wget http://redtamarin.googlecode.com/files/redtamarin_0.3.1.1049_NIX.zip
+}}}
+
+go to your home dir and unzip all to the /redtamarin dir
+{{{
+$ cd ~
+$ sudo unzip -d redtamarin redtamarin_0.3.1.1049_NIX.zip
+}}}
+
+move it to `/usr/share`
+{{{
+$ sudo mv redtamarin /usr/share/redtamarin
+}}}
+
+you may need to make the shell executable
+{{{
+$ cd /usr/share/redtamarin
+$ sudo chmod +x redshell
+$ sudo chmod +x redshell_d
+}}}
+
+and same for asc.jar
+{{{
+$ sudo chmod +x asc.jar
+}}}
+
+mount binfmt_misc
+{{{
+$ sudo mount -t binfmt_misc binfmt_misc /proc/sys/fs/binfmt_misc/
+}}}
+
+or automount on boot, add the following line to your `/etc/fstab`
+{{{
+none  /proc/sys/fs/binfmt_misc binfmt_misc defaults 0 0
+}}}
+
+register the extension `*.as3` as executable
+{{{
+$ sudo echo ':AS3:E::as3::/usr/share/redtamarin/redshell_d:' > /proc/sys/fs/binfmt_misc/register
+}}}
+
+if you obtain a "Permission Denied", see [http://unix.stackexchange.com/questions/12949/sudo-nt-passing-after-redirection-operator sudo and redirection]  and try like that
+{{{
+$ echo ':AS3:E::as3::/usr/share/redtamarin/redshell_d:' | sudo tee /proc/sys/fs/binfmt_misc/register
+}}}
