--- a/wiki/RunningShellScripts.wiki
+++ b/wiki/RunningShellScripts.wiki
@@ -145,3 +145,17 @@ and then execute it
 $ ./hello.as3
 }}}
 
+<br>
+<br>
+
+== Misc. ==
+
+As it is, the *redshell* can execute plain text files or binary files
+  * plain text files:<br>any "source code" file encoded as UTF-8
+    * `*.as`, `*.as3`, etc.
+    * you pass arguments like that `$ ./hello.as3 -- arg1 arg2 arg3`
+  * binary files:<br> any compiled file
+    * `*.abc` file
+    * `*.swf` file (containing a group of `*.abc` files)
+    * you pass arguments like that `$ ./hello.abc arg1 arg2 arg3`
+
