Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -34,6 +34,8 @@
        * [OperatingSystem Operating System]
        * [FileSystem File System]
        * [Socket Socket]
+       * profiles
+         * [Profile Profile]
     * [FlashPlatform Flash Platform]
   * Documentation
     * [Tamarin Tamarin]
