--- a/wiki/Profile.wiki
+++ b/wiki/Profile.wiki
@@ -16,6 +16,17 @@ Base profile shared by all the different profiles.
 
 *since:* 0.3.1
 
+<br>
+<br>
+
+= Details =
+
+test
+
+
+<br>
+<br>
+
 ----
 
 = Properties =
